[package]
name = "calib-targets-py"
version.workspace = true
description = "Python bindings for chess-corners"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
publish = false
autobins = false

[lib]
name = "calib_targets"
crate-type = ["cdylib"]
doc = false

[dependencies]
calib-targets = { workspace = true, features = ["image"] }
chess-corners = { workspace = true, features = ["rayon", "ml-refiner"] }
image.workspace = true
numpy.workspace = true
pyo3 = { workspace = true, features = ["extension-module", "abi3-py310"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[build-dependencies]
pyo3-build-config.workspace = true
