[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "calib-targets"
requires-python = ">=3.10"
dependencies = ["numpy"]
dynamic = ["version"]
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Vitaly Vorobyev" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://vitalyvorobyev.github.io/calib-targets-rs/"
Source = "https://github.com/VitalyVorobyev/calib-targets-rs"
Issues = "https://github.com/VitalyVorobyev/calib-targets-rs/issues"

[tool.maturin]
bindings = "pyo3"
module-name = "calib_targets._core"
python-source = "python"
