[package]
name = "calib-targets-studio"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Local web GUI for exploring calibration datasets and detector configs"

[dependencies]
axum = { workspace = true }
calib-targets = { workspace = true, features = ["tracing", "diagnostics"] }
calib-targets-bench = { path = "../calib-targets-bench" }
calib-targets-chessboard = { workspace = true, features = ["tracing", "diagnostics"] }
clap = { workspace = true, features = ["derive"] }
image = { workspace = true }
open = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net"] }
tower-http = { workspace = true, features = ["fs", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
