[package]
name = "calib-targets-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
publish = false
description = "WebAssembly bindings for calib-targets calibration target detectors"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
calib-targets-core = { workspace = true }
calib-targets-chessboard = { workspace = true }
calib-targets-charuco = { workspace = true }
calib-targets-aruco = { workspace = true }
calib-targets-marker = { workspace = true }
calib-targets-print = { workspace = true }
calib-targets-puzzleboard = { workspace = true }
chess-corners = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true

# Enable the `js` feature on the transitive `getrandom 0.2` dependency so
# `wasm32-unknown-unknown` builds compile (chess-corners-ml -> tract-onnx ->
# rand -> rand_core -> getrandom). Cargo unifies features, so this is enough
# to flip the upstream crate without modifying it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
