[package]
name = "calib-targets"
version = "0.1.0"
description = "Main entry point crate for a collection of plain calibration target detectors built on top of ChESS corners"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/calib-targets"
keywords = ["calibration", "computer-vision", "chessboard", "charuco", "aruco"]
categories = ["computer-vision", "science"]

[features]
default = ["image"]
image = ["dep:chess-corners", "dep:image"]
tracing = [
    "dep:tracing",
    "dep:tracing-log",
    "dep:tracing-subscriber",
    "calib-targets-aruco/tracing",
    "calib-targets-charuco/tracing",
    "calib-targets-chessboard/tracing",
    "calib-targets-core/tracing",
    "calib-targets-marker/tracing",
]

[dependencies]
calib-targets-charuco = { path = "../calib-targets-charuco", version = "0.1" }
calib-targets-aruco = { path = "../calib-targets-aruco", version = "0.1" }
calib-targets-core = { path = "../calib-targets-core", version = "0.1" }
calib-targets-chessboard = { path = "../calib-targets-chessboard", version = "0.1" }
calib-targets-marker = { path = "../calib-targets-marker", version = "0.1" }
chess-corners = { version = "0.2", optional = true }
nalgebra = "0.34"
thiserror = "2"
image = { version = "0.25", default-features = true, optional = true }
tracing = { version = "0.1", optional = true }
tracing-log = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["fmt", "env-filter"] }

[dev-dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
