[package]
name = "calib-targets"
version.workspace = true
description = "Main entry point crate for a collection of plain calibration target detectors built on top of ChESS corners"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["calibration", "computer-vision", "chessboard", "charuco", "aruco"]
categories = ["computer-vision", "science"]

[features]
default = ["image", "cli"]
image = ["dep:chess-corners", "dep:image"]
cli = ["dep:clap"]
tracing = [
    "dep:tracing",
    "dep:tracing-log",
    "dep:tracing-subscriber",
    "calib-targets-aruco/tracing",
    "calib-targets-charuco/tracing",
    "calib-targets-chessboard/tracing",
    "calib-targets-core/tracing",
    "calib-targets-marker/tracing",
    "calib-targets-puzzleboard/tracing",
]

[dependencies]
calib-targets-charuco.workspace = true
calib-targets-aruco.workspace = true
calib-targets-core.workspace = true
calib-targets-chessboard.workspace = true
calib-targets-marker.workspace = true
calib-targets-print.workspace = true
calib-targets-puzzleboard.workspace = true
projective-grid.workspace = true
chess-corners = { workspace = true, optional = true, features = ["rayon", "ml-refiner"] }
clap = { workspace = true, optional = true, features = ["derive"] }
nalgebra.workspace = true
thiserror.workspace = true
image = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-log = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["fmt", "env-filter"] }

[dev-dependencies]
assert_cmd.workspace = true
criterion.workspace = true
log.workspace = true
predicates.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true

[[bin]]
name = "calib-targets"
path = "src/bin/calib_targets.rs"
required-features = ["cli"]
doc = false

[[bench]]
name = "puzzleboard_sizes"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
