[package]
name = "chessboard-v2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Chessboard detector v2 — invariant-first redesign (standalone prototype)."

[dependencies]
calib-targets-core.workspace = true
projective-grid.workspace = true
nalgebra.workspace = true
kiddo.workspace = true
log.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }

[dev-dependencies]
approx = "0.5"
calib-targets.workspace = true
env_logger = "0.11"
image.workspace = true

[features]
default = []
dataset = ["serde_json"]

[[example]]
name = "run_dataset"
required-features = ["dataset"]
