[package]
name = "projective-grid-next"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
documentation.workspace = true
description = "From-scratch successor to `projective-grid` (provisional name during rewrite). Will be renamed to `projective-grid` after the legacy crate is deleted."
keywords = ["computer-vision", "geometry", "homography", "grid", "calibration"]
categories = ["computer-vision", "science", "algorithms"]

[features]
default = []
# Optional `tracing` feature. Off by default. When enabled, hot-path functions
# emit spans so callers can collect per-stage timings without adding parallel
# timed APIs.
tracing = ["dep:tracing"]

[dependencies]
delaunator = { workspace = true }
kiddo = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
