[package]
name = "projective-grid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Image-free, target-agnostic projective grid recovery: label 2D feature points with (i, j) lattice coordinates under perspective"
keywords = ["computer-vision", "geometry", "homography", "grid", "calibration"]
categories = ["computer-vision", "science", "algorithms"]

[features]
default = []
# Optional `tracing` feature. Off by default. When enabled, hot-path functions
# emit spans so callers can collect per-stage timings without adding parallel
# timed APIs.
tracing = ["dep:tracing"]

[dependencies]
delaunator = { workspace = true }
kiddo = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

# NOTE: the Criterion microbenchmarks (grow / homography / topological /
# merge / validate) were removed in the Phase 2 collapse — they targeted the
# pre-collapse internal module paths (`detect::advanced::square::*`, plus the
# `homography` module already folded into `geometry` in Phase 1) that Phase 3
# renames wholesale. Benchmark coverage is re-added in Phase 3 against the
# final `seed_and_grow` / `shared` / `topological` module tree, restoring the
# `criterion` (and any `serde_json`) dev-dependency alongside them.

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
