[package]
name = "projective-grid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Image-free, target-agnostic projective grid recovery: label 2D feature points with (i, j) lattice coordinates under perspective"
keywords = ["computer-vision", "geometry", "homography", "grid", "calibration"]
categories = ["computer-vision", "science", "algorithms"]

[features]
default = []
# Optional `tracing` feature. Off by default. When enabled, hot-path functions
# emit spans so callers can collect per-stage timings without adding parallel
# timed APIs.
tracing = ["dep:tracing"]

[dependencies]
delaunator = { workspace = true }
kiddo = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

# Criterion benchmark for the public `detect_grid_all` entry across the three
# canonical lattice/evidence cells, run on deterministic seeded-LCG synthetic
# fixtures (no `rand` dependency). See `benches/detect_grid.rs`.
[[bench]]
name = "detect_grid"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
